--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ services:
   mongodb:
     restart: always
     image: mongo
-    container_name: mongoDB
+    container_name: mongodb
     ports:
       - "27017:27017"
 
   redisdb:
     restart: always
-    container_name: redisDB
+    container_name: redisdb
     image: redis
     ports:
       - "6379:6379"
@@ -20,14 +20,14 @@ services:
     image: mancala:v1
     build: ./mancala/
     depends_on:
-      - redisDB
-      - mongoDB
+      - redisdb
+      - mongodb
     environment:
       - MANCALA_PIT_STONES=6
       - SPRING_APPLICATION_NAME=mancala
-      - SPRING_DATA_MONGODB_HOST=mongoDB
+      - SPRING_DATA_MONGODB_HOST=mongodb
       - SPRING_DATA_MONGODB_PORT=27017
-      - SPRING_REDIS_HOST=redisDB
+      - SPRING_REDIS_HOST=redisdb
       - SPRING_REDIS_PORT=6379
       - MANCALA_API_SERVICE_ID= mancala
     volumes:
